# Semanticbot

./: .gitignore  Dockerfile  README.md
outputs/: semantic_map.pkl
ros2_ws/install/semantic_fusion/lib/semantic_fusion/: fusion_node
ros2_ws/install/semantic_fusion/share/ament_index/resource_index/parent_prefix_path/: semantic_fusion
ros2_ws/install/semantic_fusion/share/semantic_fusion/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/semantic_fusion/share/semantic_fusion/cmake/: semantic_fusionConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/semantic_fusion/: CMakeLists.txt  package.xml
ros2_ws/src/semantic_fusion/src/: fusion_node.cpp
scripts/: clip_embeddings.py  detect_and_lift_3d.py  detect_objects.py  frame_reader.py  query_map.py  view_replica.py
